tests/errors/codegen/fortran/FORTRAN_ALLOCATABLE_IN_EXPRESSION.py
import numpy as np
a = np.ones(4)*5
